--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,7 +1,8 @@
-.Login{
+.Register{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     /* background-color: black; */
-    width: 40%;
+    width: 50%;
+
 }
